MSVC project tweaks

--- a/msvc2017/FreeOrion/FreeOrion.vcxproj
+++ b/msvc2017/FreeOrion/FreeOrion.vcxproj
@@ -175,6 +175,7 @@
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <IgnoreSpecificDefaultLibraries>LIBCMT; LIBCPMT</IgnoreSpecificDefaultLibraries>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
+      <ImageHasSafeExceptionHandlers>true</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
