--- a/msvc2017/GiGi/GiGi.vcxproj
+++ b/msvc2017/GiGi/GiGi.vcxproj
@@ -305,6 +305,7 @@
       </TreatLinkerWarningAsErrors>
       <IgnoreSpecificDefaultLibraries>LIBCMT</IgnoreSpecificDefaultLibraries>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
+      <ImageHasSafeExceptionHandlers>true</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
