--- a/msvc2017/GodotClient/GodotClient.vcxproj
+++ b/msvc2017/GodotClient/GodotClient.vcxproj
@@ -115,7 +115,7 @@
       <CompileAsManaged>false</CompileAsManaged>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalIncludeDirectories>../../../include/;../include/;../../godot/godot-cpp/include/;../../godot/godot-cpp/include/core/;../../godot/godot-cpp/include/gen/;../../godot/godot-cpp/godot_headers/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>NDEBUG;FREEORION_BUILD_HUMAN;FREEORION_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;FREEORION_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp14</LanguageStandard>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <CompileAs>CompileAsCpp</CompileAs>
@@ -129,7 +129,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <OutputFile>../../FreeOrionGodot.exe</OutputFile>
-      <AdditionalDependencies>Common.lib;Parsers.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Common.lib;Parsers.lib;Godot.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../../;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>LIBCMT; LIBCPMT</IgnoreSpecificDefaultLibraries>
@@ -211,6 +211,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\client\ClientApp.h" />
+    <ClInclude Include="..\..\client\ClientFSMEvents.h" />
+    <ClInclude Include="..\..\client\ClientNetworking.h" />
     <ClInclude Include="..\..\godot\gdfreeorion.h" />
     <ClInclude Include="..\..\godot\GodotClientApp.h" />
     <ClInclude Include="..\..\godot\GodotNetworking.h" />
@@ -223,12 +226,17 @@
     <ClInclude Include="..\..\util\OptionsDB.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\client\ClientApp.cpp" />
+    <ClCompile Include="..\..\client\ClientFSMEvents.cpp" />
+    <ClCompile Include="..\..\client\ClientNetworking.cpp" />
     <ClCompile Include="..\..\godot\gdfreeorion.cpp" />
     <ClCompile Include="..\..\godot\gdlibrary.cpp" />
     <ClCompile Include="..\..\godot\GodotClientApp.cpp" />
     <ClCompile Include="..\..\godot\GodotNetworking.cpp" />
     <ClCompile Include="..\..\godot\GodotSystem.cpp" />
     <ClCompile Include="..\..\godot\OptionsDB.cpp" />
+    <ClCompile Include="..\..\util\DependencyVersions.cpp" />
+    <ClCompile Include="..\..\util\Process.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
