--- a/msvc2022/Common/Common.vcxproj.filters
+++ b/msvc2022/Common/Common.vcxproj.filters
@@ -311,6 +311,9 @@
     <ClInclude Include="..\..\util\PythonCommon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\util\Export.h">
+      <Filter>Header Files\util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\network\MessageQueue.cpp">
